--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
     "express-flash": "0.0.2",
+    "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "fbgraph": "^1.4.1",
+    "graphql": "^0.13.2",
     "lodash": "^4.17.4",
     "lusca": "^1.5.2",
     "mongoose": "^4.13.11",
@@ -62,6 +64,7 @@
     "@types/dotenv": "^4.0.2",
     "@types/errorhandler": "^0.0.32",
     "@types/express": "^4.11.1",
+    "@types/express-graphql": "^0.6.1",
     "@types/express-session": "^1.15.8",
     "@types/jest": "^22.1.3",
     "@types/jquery": "^3.2.17",
