--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,12 @@
                 "node_modules/*",
                 "src/types/*"
             ]
-        }
+        },
+        "lib": [
+         "es6",
+         "dom",
+         "esnext.asynciterable"
+        ]
     },
     "include": [
         "src/**/*"
